compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__guard_if_float.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = 1.0 case x { _ if x -> 1 }"

---

error: Type mismatch
  ┌─ /src/one/two.gleam:1:27
  │
1 │ let x = 1.0 case x { _ if x -> 1 }
  │                           ^

Expected type:

    Bool

Found type:

    Float


